# financial-transaction-workflow-deadlift-example

./: .gitignore  docker-compose.yml
receive-tx-module/: Cargo.toml
receive-tx-module/src/: lib.rs
tx-producer/: .dockerignore  Dockerfile  README.md  pyproject.toml
tx-producer/tx_producer/: __init__.py
