[tool.poetry]
name = "tx-producer"
version = "0.1.0"
description = ""
authors = ["Alex Dunne <alex.dunne@zerosync.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tx-producer = "tx_producer:run"
